--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,10 +1,4 @@
-<!DOCTYPE html>
-<html>
-  <head>
-	<title>Ruby on Rails Tutorial Sample App | Help</title>
-  </head>
-
-<body>
+<% provide(:title, 'Help') %>
 <h1>Help</h1>
 <p>
 	Get help on the Ruby on Rails Tutorial at the
@@ -13,5 +7,3 @@
 	<a href="http://railstutorial.org/book">Ruby on Rails Tutorial book</a>.
 	Have fun!
 </p>
-</body>
-</html>
