--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,6 +1,12 @@
-<h1>Sample App</h1>
-<p>
+<div class="center hero-unit">
+  <h1>This is.. the Sample App!</h1>
+  <h2>
 	This is the home page from the
 	<a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>
 	sample application. Cool, right?
-</p>
+  </h2>
+
+  <%= link_to "Sign up Now!", "#", class: "btn btn-large btn-primary"%>
+</div>
+
+<%= link_to image_tag("rails.png", alt: "Rails"), 'http://rubyonrails.org/' %>
