Adds session controller. Finishes sign in/out

--- a/app/views/shared/_error_messages.html.erb
+++ b/app/views/shared/_error_messages.html.erb
@@ -12,7 +12,7 @@
 	  <% if msg.include? "digest" %>
 		<% next %>
 	  <% end %>
-	  <li>* <%= msg %> </li>
+	  <li><%= msg %> </li>
 	<% end %>
 	</ul>
   </div>
